# RealEstateScrapper

./: .dockerignore  .env.example  .gitignore  .mcp.json  AGENTS.md  Dockerfile  README.md  docker-compose.prod.yaml  docker-compose.yaml  docker-compose.yml  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  renovate.json
.github/workflows/: build-and-push.yaml  ci.yaml  ci.yml
.opencode/: opencode.jsonc
backend/: .env.example  AGENTS.md  pyproject.toml
backend/migrations/: env.py
backend/tests/: conftest.py  test_config.py  test_docs_present.py
docker/: entrypoint.sh
docker/backend/: Dockerfile
docker/db/: Dockerfile
docker/frontend/: Dockerfile
docs/: adding-a-scraper.md  architecture.md  configuration.md  running.md  scrapers-field-contract.md  testing.md
docs/superpowers/: README.md
frontend/: AGENTS.md  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vitest.config.ts
frontend/src/: App.test.tsx  App.tsx  leaflet-default-icon.ts  main.tsx  styles.css
migrations/: env.py
migrations/versions/: 0001_enable_pgvector.py  0002_sources.py  0003_listings.py  0004_scrape_runs.py  0005_llm_analysis.py  0006_dedup.py  0007_user_data.py  0008_listing_attributes.py  0009_enable_postgis.py
openspec/: config.yaml
src/realestate/: config.py  logging.py
tests/: conftest.py  test_config.py  test_docs_present.py  test_smoke.py
tests/api/: conftest.py  test_cors.py  test_health.py  test_lifespan.py  test_listings_api.py  test_scrape_api.py  test_scrape_events.py  test_user_api.py
tests/db/: test_dedup_models.py  test_listing_model.py  test_llm_analysis_model.py  test_migrations.py  test_scrape_run_model.py  test_user_data_models.py
tests/e2e/: test_full_flow.py
tests/enrichment/: conftest.py  test_dedup_service.py  test_enrichment_service.py
tests/events/: test_event_bus.py
tests/ingestion/: test_fetcher_lifecycle.py  test_geocode.py  test_incremental.py  test_ingest_geocode.py  test_normalize.py  test_service.py
tests/llm/: test_fake_client.py  test_openai_compat.py
tests/scheduler/: test_scheduler_job.py  (+1 more)
(+230 files in other folders)
